# gridded

./: .buildinfo  .buildinfo.bak  .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  README.rst  api_reference.html  conda_requirements.txt  conda_requirements_dev.txt  conda_requirements_test.txt  environment.yml  genindex.html  github_deploy_key.enc  gridded.html  gridded.pysgrid.html  gridded.pyugrid.grid_io.html  gridded.pyugrid.html  gridded.tests.html  index.html  installing.html  modules.html  non_conforming_data.html  objects.inv  overview.html  pixi.toml  py-modindex.html  py2_environment.yml  py3_environment.yml  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.cfg.legacy  setup.py  tutorial.html
.github/: dependabot.yml
.github/workflows/: conda_test.yml  pixi_test.yml
_modules/: index.html
_modules/gridded/: depth.html  gridded.html  grids.html  time.html  utilities.html  variable.html
_sources/: gridded.rst.txt  gridded.tests.rst.txt  index.rst.txt  modules.rst.txt  overview.rst.txt
_static/: documentation_options.js
docs/: Makefile  build-gh-pages.sh  make.bat
docs/source/: api_reference.rst  conf.py  gridded.pysgrid.rst  gridded.pyugrid.grid_io.rst  gridded.pyugrid.rst  gridded.rst  index.rst  installing.rst  non_conforming_data.rst  overview.rst  tutorial.rst
examples/: S_Depth_gen.ipynb  UGRID_plotting_COMT.ipynb  UGRID_plotting_COMT.py  Untitled.py  load_arbitrary_ugrid.py  trajectory.py  trajectory_test.ipynb  trajectory_test.py  working_with_triangular_grids.py
examples/3dm/: SanDiego.3dm  read_3dm.py
examples/ROMS/: ROMS_example.ipynb
examples/non_conforming_files/: load_arbitrary_ugrid.py
gridded/: __init__.py  depth.py  grid_property.py  gridded.py  grids.py  property.py  time.py  utilities.py  variable.py  variableapi.py
gridded/io/: __init__.py  verdat.py
gridded/nogrid/: nogrid.py
gridded/plotting/: mpl_plotting.py
gridded/pysgrid/: __init__.py  lookup.py  processing_2d.py  read_netcdf.py  sgrid.py  utils.py  variables.py
gridded/pyugrid/: __init__.py  _create_dual_node_mesh.c  _create_dual_node_mesh.pyx  inverse_lookup.c  inverse_lookup.pyx  read_netcdf.py  ugrid.py  (+3 more)
src/: scipy2017
(+106 files in other folders)
